--- a/style.css
+++ b/style.css
@@ -35,3 +35,18 @@ body{
     .center{
         text-align: center;
     }
+    .box-one{
+        width: 100%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-left: 10% ; 
+        border-radius: 10px;
+        box-shadow:10px 10px 40px teal;
+        text-align: center;
+        margin: 5%;
+    }
+    img {
+        width: 70%;
+        margin: auto;
+        display: block;
+    }
