--- a/style.css
+++ b/style.css
@@ -43,10 +43,15 @@ body{
         border-radius: 10px;
         box-shadow:10px 10px 40px teal;
         text-align: center;
-        margin: 5%;
+        margin: 0.5%;
     }
     img {
         width: 70%;
         margin: auto;
         display: block;
+    }
+    .finising{
+        background-color: black;
+        color: white;
+        text-align: center;
     }
