--- a/style.css
+++ b/style.css
@@ -37,16 +37,17 @@ body{
     }
     .box-one{
         width: 100%;
-        margin-left: 5%;
-        margin-right: 5%;
-        padding-left: 10% ; 
-        border-radius: 10px;
-        box-shadow:10px 10px 40px teal;
+        margin-left: 90%;
+        margin-right: 85%;
+        padding-left: 5% ; 
+        padding-right: 5%;
+        border-radius: 5px;
+        box-shadow:10px 10px 40px rgb(8, 70, 70);
         text-align: center;
-        margin: 0.5%;
+        margin: 0.8%;
     }
     img {
-        width: 70%;
+        width: 100%;
         margin: auto;
         display: block;
     }
